minikube/networking/sol42/api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
  labels:
    app: api
spec:
  containers:
    - name: custom
      image: vikashraj1825/netkit
