minikube/networking/sol42/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cache
  name: redis
spec:
  ports:
  - name: redis 
    port: 6379 
    protocol: TCP
    targetPort: 6379
  - name: http 
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cache
status:
  loadBalancer: {}
